<?xml version="1.0"?>
<package>
  <name>hiqp_ros</name>
  <version>0.0.3</version>
  <description>The HiQP_Controllers package</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>controller_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>hiqp_core</build_depend>
  <build_depend>hiqp_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>hiqp_core</run_depend>
  <run_depend>hiqp_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins.xml"/>

  </export>
</package>
