<?xml version="1.0"?>
<package format="3">
  <name>hiqp_ros</name>
  <version>1.0.1</version>
  <description>The HiQP_Controllers package</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>  
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>visualization_msgs</depend>
  <depend>hiqp_core</depend>
  <depend>hiqp_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>realtime_tools</depend>  
  <depend>pluginlib</depend>  
  <depend>generate_parameter_library</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
