<package>

  <name>irb4400_description</name>
  <version>0.0.1</version>

  <description>URDF model for physics simulation in Gazebo of robot IRB4400.</description>
  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
